--- a/MMXVII/.classpath
+++ b/MMXVII/.classpath
@@ -27,18 +27,21 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lwjgl/jar/joml-1.9.1.jar"/>
 	<classpathentry kind="lib" path="lwjgl/jar/PNGDecoder.jar"/>
-	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-nanovg.jar">
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-nanovg.jar" sourcepath="lwjgl/src/lwjgl-nanovg-sources.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Bokuseru/lwjgl/doc/lwjgl-nanovg-javadoc.jar!/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Bokuseru/lwjgl/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-openal.jar">
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-openal.jar" sourcepath="lwjgl/src/lwjgl-openal-sources.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Bokuseru/lwjgl/doc/lwjgl-openal-javadoc.jar!/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Bokuseru/lwjgl/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-stb.jar">
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-stb.jar" sourcepath="lwjgl/src/lwjgl-stb-sources.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Bokuseru/lwjgl/doc/lwjgl-stb-javadoc.jar!/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Bokuseru/lwjgl/native/windows"/>
 		</attributes>
 	</classpathentry>
